tests/sksl/errors/ProgramTooLarge_Globals.glsl
### Compilation failed:

error: 11: global variable 'extra_large' exceeds the size limit
1 error
